make monday first day of week

--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -68,12 +68,11 @@ import Link from "../../components/Link.astro";
       <td><code>firstDayOfWeek</code></td>
       <td><code>first-day-of-week</code></td>
       <td>
-        The first day of the week, where Monday is <code>0</code>, Tuesday is <code
-          >1</code
-        >, etc
+        The first day of the week, where Sunday is <code>0</code>, Monday is
+        <code>1</code>, etc
       </td>
       <td><code>number</code></td>
-      <td><code>0</code></td>
+      <td><code>1</code></td>
     </tr>
     <tr>
       <td><code>showOutsideDays</code></td>
