add theme-color to docs

--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -18,9 +18,8 @@ const { title, root } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      {title} - Cally
-    </title>
+    <meta name="theme-color" content="#dc2626" />
+    <title>{title} - Cally</title>
 
     <slot name="head" />
   </head>
