--- a/docs/src/pages/components/index.astro
+++ b/docs/src/pages/components/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Link from "../../components/Link.astro";
 ---
 
 <Layout title="API">
@@ -11,8 +12,20 @@ import Layout from "../../layouts/Layout.astro";
   </p>
 
   <ul>
-    <li><a href="./calendar-date/"><code>{`<calendar-date>`}</code></a></li>
-    <li><a href="./calendar-range/"><code>{`<calendar-range>`}</code></a></li>
-    <li><a href="./calendar-month/"><code>{`<calendar-month>`}</code></a></li>
+    <li>
+      <Link href="/components/calendar-date/"
+        ><code>{`<calendar-date>`}</code></Link
+      >
+    </li>
+    <li>
+      <Link href="/components/calendar-range/"
+        ><code>{`<calendar-range>`}</code></Link
+      >
+    </li>
+    <li>
+      <Link href="/components/calendar-month/"
+        ><code>{`<calendar-month>`}</code></Link
+      >
+    </li>
   </ul>
 </Layout>
