move theming and integration under /guides

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -160,8 +160,8 @@ import Link from "../../components/Link.astro";
   </p>
 
   <p>
-    See the guide on <Link href="/theming/">theming</Link> for a walkthrough of how
-    to style this component.
+    See the guide on <Link href="/guides/theming/">theming</Link> for a walkthrough
+    of how to style this component.
   </p>
 
   <Table>
