--- a/docs/src/pages/guides/integration.astro
+++ b/docs/src/pages/guides/integration.astro
@@ -1,10 +1,10 @@
 ---
-import PageIntro from "../components/PageIntro.astro";
-import Layout from "../layouts/Layout.astro";
-import Example from "../components/Example.astro";
-import Note from "../components/Note.astro";
-import Heading from "../components/Heading.astro";
-import Link from "../components/Link.astro";
+import PageIntro from "../../components/PageIntro.astro";
+import Layout from "../../layouts/Layout.astro";
+import Example from "../../components/Example.astro";
+import Note from "../../components/Note.astro";
+import Heading from "../../components/Heading.astro";
+import Link from "../../components/Link.astro";
 ---
 
 <Layout title="Integration">
@@ -122,7 +122,7 @@ import Link from "../components/Link.astro";
 
   <Note>
     For more information on styling and theming the calendar components please
-    see the full <Link href="/theming/">theming</Link> guide.
+    see the full <Link href="/guides/theming/">theming</Link> guide.
   </Note>
 
   <Heading level={2}>The input and toggle button</Heading>
@@ -426,7 +426,7 @@ import Link from "../components/Link.astro";
   <p>
     To find out more about each component, please see the respective
     <Link href="/components/">component API</Link> docs. Or visit the
-    <Link href="/theming/">theming</Link> guide for a more in-depth look at styling
-    the components.
+    <Link href="/guides/theming/">theming</Link> guide for a more in-depth look at
+    styling the components.
   </p>
 </Layout>
