--- a/docs/src/pages/guides/theming.astro
+++ b/docs/src/pages/guides/theming.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Example from "../components/Example.astro";
-import Color from "../components/Color.astro";
-import Note from "../components/Note.astro";
-import PageIntro from "../components/PageIntro.astro";
-import Heading from "../components/Heading.astro";
-import Link from "../components/Link.astro";
+import Layout from "../../layouts/Layout.astro";
+import Example from "../../components/Example.astro";
+import Color from "../../components/Color.astro";
+import Note from "../../components/Note.astro";
+import PageIntro from "../../components/PageIntro.astro";
+import Heading from "../../components/Heading.astro";
+import Link from "../../components/Link.astro";
 
 const colorAccent = "#7048e8";
 const colorAccentSecondary = "#845ef7";
@@ -593,8 +593,8 @@ const colorTextOnAccent = "#ffffff";
   <p>
     To find out more about each component, please see the respective
     <Link href="/components/">component API</Link> docs. Or visit the
-    <Link href="/theming/">theming</Link> guide for a more in-depth look at styling
-    the components.
+    <Link href="/guides/theming/">theming</Link> guide for a more in-depth look at
+    styling the components.
   </p>
 </Layout>
 
