--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -156,10 +156,11 @@ const tagline = "Small, feature-rich calendar components";
   <p>
     For a detailed look at each component, check out the respective
     <Link href="/components/">component API</Link> docs. The
-    <Link href="/theming/">theming</Link> guide to explains how to style the components
-    to match your designs. And the
-    <Link href="/integration/">integration</Link> guide explains how to compose Cally's
-    components to build a date/range picker using your own or third-party components.
+    <Link href="/guides/theming/">theming</Link> guide to explains how to style the
+    components to match your designs. And the
+    <Link href="/guides/integration/">integration</Link> guide explains how to compose
+    Cally's components to build a date/range picker using your own or third-party
+    components.
   </p>
 
   <p>
