--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -69,8 +69,8 @@ import Link from "../../components/Link.astro";
   </p>
 
   <p>
-    See the guide on <Link href="/theming/">theming</Link> for a walkthrough of how
-    to style this component.
+    See the guide on <Link href="/guides/theming/">theming</Link> for a walkthrough
+    of how to style this component.
   </p>
 
   <Table>
