add border-radius to <code> by default

--- a/docs/src/components/Color.astro
+++ b/docs/src/components/Color.astro
@@ -12,7 +12,7 @@ const { color } = Astro.props;
     display: inline-flex;
     align-items: center;
     gap: var(--space-3xs);
-    border-radius: var(--border-radius);
+    padding-block: 0;
   }
   span {
     display: inline-block;
