add framework guide

--- a/docs/src/pages/guides/theming.astro
+++ b/docs/src/pages/guides/theming.astro
@@ -107,7 +107,7 @@ const colorTextOnAccent = "#ffffff";
       >CSS nesting</a
     >
     in these examples. This is a fairly new feature, and may not be supported in
-    all browsers
+    all browsers.
   </Note>
 
   <Example
@@ -273,7 +273,7 @@ const colorTextOnAccent = "#ffffff";
   </p>
 
   <p>
-    Let's style the previous and next buttons first. These can be targetted via
+    Let's style the previous and next buttons first. These can be targeted via
     the <code>button</code> part. Additionally, the previous and next buttons have
     <code>previous</code> and <code>next</code> parts, should you wish to style them
     differently.
@@ -593,8 +593,8 @@ const colorTextOnAccent = "#ffffff";
   <p>
     To find out more about each component, please see the respective
     <Link href="/components/">component API</Link> docs. Or visit the
-    <Link href="/guides/theming/">theming</Link> guide for a more in-depth look at
-    styling the components.
+    <Link href="/guides/integration/">integration</Link> guide for an in-depth look
+    at how to use Cally with existing components.
   </p>
 </Layout>
 
