fix spelling mistakes

--- a/docs/src/pages/accessibility.astro
+++ b/docs/src/pages/accessibility.astro
@@ -29,14 +29,14 @@ import Note from "../components/Note.astro";
     In some regards the components offered here are akin to design system
     components. They are low-level pieces to a larger puzzle. The components
     themselves strive to offer the best possible accessible <em>baseline</em>.
-    But beyond that, the guarantees that can be made regarding accessiblity are
+    But beyond that, the guarantees that can be made regarding accessibility are
     limited. The way the components get used and combined can still lead to
     inaccessible outcomes.
   </p>
 
   <p>
     If you are building more complex interfaces atop these components, you will
-    need to test and evaluate accessiblity yourself.
+    need to test and evaluate accessibility yourself.
   </p>
 
   <Heading level={2}>Testing</Heading>
