--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -178,10 +178,10 @@ const tagline = "Small, feature-rich calendar components";
       href="https://react-spectrum.adobe.com/react-aria/components.html#date-and-time"
       >React ARIA Components</a
     >, though there is some amount of convergent evolution. Much appreciation to
-    <a href="https://stream7.github.io/">Nikos Gereoudakis</a> for transferring ownersip
-    of the <code>cally</code> package on npm. And finally, thanks for
-    <a href="https://twitter.com/uppercod">@Uppercod</a> for all his work on
-    <a href="https://atomicojs.dev/">atomico</a>.
+    <a href="https://stream7.github.io/">Nikos Gereoudakis</a> for transferring ownership
+    of the <code>cally</code> package on npm. And finally, thanks to
+    <a href="https://twitter.com/Uppercod">@Uppercod</a> for his work on
+    <a href="https://atomicojs.dev/">Atomico</a>.
   </p>
 </Layout>
 
