rename "integration" guide to "usage"

--- a/docs/src/pages/guides/index.astro
+++ b/docs/src/pages/guides/index.astro
@@ -13,16 +13,16 @@ import Link from "../../components/Link.astro";
 
     <ul>
       <li>
-        <Link href="/guides/frameworks/">Frameworks</Link> - integrating Cally with
-        your framework of choice
+        <Link href="/guides/frameworks/">Frameworks</Link> - integrating with your
+        framework of choice
       </li>
       <li>
         <Link href="/guides/theming/">Theming</Link> - customizing the look and feel
-        of Cally to match your app
+        to match your app
       </li>
       <li>
-        <Link href="/guides/integration/">Integration</Link> - integrating Cally
-        with your existing components
+        <Link href="/guides/usage/">Usage</Link> - integrating with your existing
+        components to build more complex UIs
       </li>
     </ul>
   </p>
