--- a/docs/src/pages/guides/theming.astro
+++ b/docs/src/pages/guides/theming.astro
@@ -593,8 +593,8 @@ const colorTextOnAccent = "#ffffff";
   <p>
     To find out more about each component, please see the respective
     <Link href="/components/">component API</Link> docs. Or visit the
-    <Link href="/guides/integration/">integration</Link> guide for an in-depth look
-    at how to use Cally with existing components.
+    <Link href="/guides/usage/">usage</Link> guide for an in-depth look at how to
+    use Cally with existing components.
   </p>
 </Layout>
 
