--- a/docs/src/pages/guides/usage.astro
+++ b/docs/src/pages/guides/usage.astro
@@ -7,7 +7,7 @@ import Heading from "../../components/Heading.astro";
 import Link from "../../components/Link.astro";
 ---
 
-<Layout title="Integration">
+<Layout title="Usage">
   <link
     slot="head"
     rel="stylesheet"
@@ -20,7 +20,7 @@ import Link from "../../components/Link.astro";
     src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/cdn/shoelace.js"
   ></script>
 
-  <h1 slot="intro">Integrating with other components</h1>
+  <h1 slot="intro">Usage with existing components</h1>
   <PageIntro slot="intro">Let's build a date range picker</PageIntro>
 
   <p>
