--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -35,10 +35,8 @@ const tagline = "Small, feature-rich calendar components";
       logical properties, RTL support
     </li>
     <li>
-      <strong>Themeable</strong> - CSS
-      <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::part">parts</a
-      >
-      and custom properties to offer flexibility and power
+      <strong>Themeable</strong> - CSS parts and custom properties to offer flexibility
+      and power
     </li>
     <li>
       <strong>Composable</strong> - impose no DOM specific structure, play well with
@@ -156,11 +154,10 @@ const tagline = "Small, feature-rich calendar components";
   <p>
     For a detailed look at each component, check out the respective
     <Link href="/components/">component API</Link> docs. The
-    <Link href="/guides/theming/">theming</Link> guide to explains how to style the
-    components to match your designs. And the
-    <Link href="/guides/integration/">integration</Link> guide explains how to compose
-    Cally's components to build a date/range picker using your own or third-party
-    components.
+    <Link href="/guides/">guides</Link> section offers walkthroughs on
+    <Link href="/guides/theming/">theming</Link>,
+    <Link href="/guides/frameworks/">framework integration</Link>, and
+    <Link href="/guides/usage/">usage with existing components</Link>.
   </p>
 
   <p>
