cleanup docs, fix sizing of featured example

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -5,7 +5,7 @@ import PageIntro from "../components/PageIntro.astro";
 import Example from "../components/Example.astro";
 import Heading from "../components/Heading.astro";
 import Link from "../components/Link.astro";
-import IntroExample from "../components/IntroExample.astro";
+import FeatureExample from "../components/FeatureExample.astro";
 
 const tagline = "Small, feature-rich calendar components";
 ---
@@ -13,7 +13,7 @@ const tagline = "Small, feature-rich calendar components";
 <Layout title={tagline} root>
   <PageIntro slot="intro">{tagline}</PageIntro>
 
-  <IntroExample />
+  <FeatureExample />
 
   <Heading level={2}>Goals</Heading>
 
