--- a/docs/src/pages/guides/index.astro
+++ b/docs/src/pages/guides/index.astro
@@ -3,7 +3,13 @@ import Layout from "../../layouts/Layout.astro";
 import Link from "../../components/Link.astro";
 ---
 
-<Layout title="Guides">
+<Layout
+  meta={{
+    title: "Guides",
+    description:
+      "A series of guides and walkthroughs on how to get the most out of Cally's calendar components.",
+  }}
+>
   <h1 slot="intro">Guides</h1>
 
   <p>
