--- a/docs/src/pages/guides/theming.astro
+++ b/docs/src/pages/guides/theming.astro
@@ -12,7 +12,13 @@ const colorAccentSecondary = "#845ef7";
 const colorTextOnAccent = "#ffffff";
 ---
 
-<Layout title="Theming">
+<Layout
+  meta={{
+    title: "Theming guide",
+    description:
+      "Learn how to style Cally's calendar components so that they fit in perfectly with your site or application.",
+  }}
+>
   <h1 slot="intro">Theming</h1>
   <PageIntro slot="intro">Learn how to style the components</PageIntro>
 
