--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -6,7 +6,14 @@ import Heading from "../../components/Heading.astro";
 import Link from "../../components/Link.astro";
 ---
 
-<ApiLayout title="<calendar-range>">
+<ApiLayout
+  heading="<calendar-range>"
+  meta={{
+    title: "<calendar-range> API",
+    description:
+      "The calendar-range component is used to select a date range. Find out how to use its properties, methods, events, and styling options.",
+  }}
+>
   <p>
     This component, combined with
     <Link href="/api/calendar-month/"><code>{`<calendar-month>`}</code></Link>,
