--- a/docs/src/pages/components/index.astro
+++ b/docs/src/pages/components/index.astro
@@ -3,7 +3,13 @@ import Layout from "../../layouts/Layout.astro";
 import Link from "../../components/Link.astro";
 ---
 
-<Layout title="API">
+<Layout
+  meta={{
+    title: "Components",
+    description:
+      "A list of all calendar components offered by Cally, along with links to their respective API docs.",
+  }}
+>
   <h1 slot="intro">Component API</h1>
 
   <p>
