--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -10,7 +10,15 @@ import FeatureExample from "../components/FeatureExample.astro";
 const tagline = "Small, feature-rich calendar components";
 ---
 
-<Layout title={tagline} root>
+<Layout
+  root
+  meta={{
+    title: "Cally: small, feature-rich calendar components",
+    description:
+      "Open source calendar components for selecting single dates or date ranges. Framework-agnostic, themeable, localizable, accessible.",
+  }}
+  og={{ type: "website" }}
+>
   <PageIntro slot="intro">{tagline}</PageIntro>
 
   <FeatureExample />
