--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ interface Props {
 }
 
 const baseUrl = new URL(import.meta.env.BASE_URL, Astro.url);
-const ogImageUrl = new URL("public/og.png", baseUrl);
+const ogImageUrl = new URL("og.png", baseUrl);
 
 const {
   meta: { title, description },
