expose header and container parts for date/range

--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -214,6 +214,14 @@ import Link from "../../components/Link.astro";
     </tr>
 
     <tr>
+      <td><code>container</code></td>
+      <td>The container for the entire component</td>
+    </tr>
+    <tr>
+      <td><code>header</code></td>
+      <td>The container for <code>heading</code> and <code>button</code>s</td>
+    </tr>
+    <tr>
       <td><code>button</code></td>
       <td>Any button within the component</td>
     </tr>
