drop "button-" prefix from button slots

--- a/docs/src/pages/guides/theming.astro
+++ b/docs/src/pages/guides/theming.astro
@@ -103,8 +103,7 @@ const colorTextOnAccent = "#ffffff";
       >slots</a
     >. Slots are a way to pass content into a component from the outside. The
     <code>{`<calendar-range>`}</code> and <code>{`<calendar-date>`}</code> components
-    offer <code>button-previous</code> and <code>button-next</code> slots for this
-    purpose.
+    offer <code>previous</code> and <code>next</code> slots for this purpose.
   </p>
 
   <Note>
@@ -152,7 +151,7 @@ const colorTextOnAccent = "#ffffff";
     >
       <svg
         aria-label="Previous"
-        slot="button-previous"
+        slot="previous"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -160,7 +159,7 @@ const colorTextOnAccent = "#ffffff";
       </svg>
       <svg
         aria-label="Next"
-        slot="button-next"
+        slot="next"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -242,7 +241,7 @@ const colorTextOnAccent = "#ffffff";
     >
       <svg
         aria-label="Previous"
-        slot="button-previous"
+        slot="previous"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -250,7 +249,7 @@ const colorTextOnAccent = "#ffffff";
       </svg>
       <svg
         aria-label="Next"
-        slot="button-next"
+        slot="next"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -338,7 +337,7 @@ const colorTextOnAccent = "#ffffff";
     >
       <svg
         aria-label="Previous"
-        slot="button-previous"
+        slot="previous"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -346,7 +345,7 @@ const colorTextOnAccent = "#ffffff";
       </svg>
       <svg
         aria-label="Next"
-        slot="button-next"
+        slot="next"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -445,7 +444,7 @@ const colorTextOnAccent = "#ffffff";
     >
       <svg
         aria-label="Previous"
-        slot="button-previous"
+        slot="previous"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -453,7 +452,7 @@ const colorTextOnAccent = "#ffffff";
       </svg>
       <svg
         aria-label="Next"
-        slot="button-next"
+        slot="next"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -557,7 +556,7 @@ const colorTextOnAccent = "#ffffff";
     >
       <svg
         aria-label="Previous"
-        slot="button-previous"
+        slot="previous"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
@@ -565,7 +564,7 @@ const colorTextOnAccent = "#ffffff";
       </svg>
       <svg
         aria-label="Next"
-        slot="button-next"
+        slot="next"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
       >
