--- a/docs/src/components/BrandedCalendar.astro
+++ b/docs/src/components/BrandedCalendar.astro
@@ -11,7 +11,7 @@ const { class: className, value } = Astro.props;
   <calendar-range months="2" value={value}>
     <svg
       aria-label="Previous"
-      slot="button-previous"
+      slot="previous"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
     >
@@ -19,7 +19,7 @@ const { class: className, value } = Astro.props;
     </svg>
     <svg
       aria-label="Next"
-      slot="button-next"
+      slot="next"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
     >
