--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -178,14 +178,14 @@ import Link from "../../components/Link.astro";
       </td>
     </tr>
     <tr>
-      <td><code>button-previous</code></td>
+      <td><code>previous</code></td>
       <td>
         The inner content of the previous page button. By default uses text
         "Previous". You will likely want to slot an icon here.
       </td>
     </tr>
     <tr>
-      <td><code>button-next</code></td>
+      <td><code>next</code></td>
       <td>
         The inner content of the next page button. By default uses text "Next".
         You will likely want to slot an icon here.
