add range start/end events, improve focusday event

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -122,6 +122,7 @@ import Link from "../../components/Link.astro";
     <tr slot="head">
       <th>Name</th>
       <th>Description</th>
+      <th>Type</th>
     </tr>
 
     <tr>
@@ -130,6 +131,7 @@ import Link from "../../components/Link.astro";
         Emitted when the <code>value</code> changes via user interaction. Not emitted
         when <code>value</code> is programmatically changed
       </td>
+      <td><code>Event</code></td>
     </tr>
     <tr>
       <td><code>focusday</code></td>
@@ -137,6 +139,7 @@ import Link from "../../components/Link.astro";
         Emitted when the currently focused day changes. This can happen via
         keyboard commands, or clicking the next or previous buttons
       </td>
+      <td><code>CustomEvent&lt;Date&gt;</code></td>
     </tr>
   </Table>
 
