finalize accessibility statement

--- a/docs/src/components/Link.astro
+++ b/docs/src/components/Link.astro
@@ -2,7 +2,7 @@
 import type { HTMLAttributes } from "astro/types";
 
 interface Props extends HTMLAttributes<"a"> {
-  href: `/${string}`;
+  href: `/${string}/` | "/";
 }
 
 const { href, ...rest } = Astro.props;
