--- a/docs/src/pages/guides/usage.astro
+++ b/docs/src/pages/guides/usage.astro
@@ -426,6 +426,18 @@ import Link from "../../components/Link.astro";
   </p>
 
   <p>
+    In terms of accessibility there is more that can be done. We should add
+    <code>aria-expanded</code> to the toggle button, to communicate whether the popup
+    is open or closed. Additionally, it might be helpful to communicate when a range
+    selection has started and ended via a polite <code>aria-live</code> region. This
+    could be achieved with the <code>rangestart</code> and <code>rangeend</code>
+    <a href="http://localhost:4321/cally/components/calendar-range/#events"
+      >events</a
+    >. We could also add a hint to the input via <code>aria-describedby</code> to
+    describe the expected format for manual entry.
+  </p>
+
+  <p>
     To find out more about each component, please see the respective
     <Link href="/components/">component API</Link> docs. Or visit the
     <Link href="/guides/theming/">theming</Link> guide for a more in-depth look at
