improve docs and readme for unpkg

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -73,7 +73,7 @@ const tagline = "Small, feature-rich calendar components";
 
   <Code
     lang="html"
-    code={`<script\n  type="module"\n  src="https://unpkg.com/cally"\n></script>`}
+    code={`<script type="module" src="https://unpkg.com/cally"></script>`}
   />
 
   <p>
