--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -112,7 +112,7 @@ const tagline = "Small, feature-rich calendar components";
 
   <Heading level={3}>Date range</Heading>
 
-  For a single date, use the <code>{`<calendar-range>`}</code> component, and place
+  For a date range, use the <code>{`<calendar-range>`}</code> component, and place
   inside it a <code>{`<calendar-month>`}</code> component.
 
   <Example lineLength={50}>
