--- a/docs/src/components/Note.astro
+++ b/docs/src/components/Note.astro
@@ -17,12 +17,12 @@
     padding-block: var(--space-xs);
     margin-block-end: var(--space-s);
 
-    a {
+    :global(a) {
       --a-color: #90500a;
     }
+  }
 
-    p {
-      margin: 0;
-    }
+  p {
+    margin: 0;
   }
 </style>
