--- a/docs/src/components/PageTitle.astro
+++ b/docs/src/components/PageTitle.astro
@@ -25,10 +25,10 @@ interface Props {
     font-size: var(--step-4);
     text-decoration: none;
     border-block-end: var(--space-3xs) solid var(--color-accent);
-  }
 
-  .title:focus-visible {
-    outline-offset: 3px;
-    outline-width: 3px;
+    &:focus-visible {
+      outline-offset: 3px;
+      outline-width: 3px;
+    }
   }
 </style>
