remove nested <p> in <Note>

--- a/docs/src/pages/guides/frameworks.astro
+++ b/docs/src/pages/guides/frameworks.astro
@@ -38,14 +38,12 @@ import { Code } from "astro:components";
   </p>
 
   <Note>
-    <p>
-      <strong>Note:</strong> the next major version of React will offer
-      <a
-        href="https://github.com/facebook/react/issues/11347#issuecomment-1899140345"
-        >full support for web components</a
-      >, making these wrappers unnecessary. Though no release date has been set
-      yet.
-    </p>
+    <strong>Note:</strong> the next major version of React will offer
+    <a
+      href="https://github.com/facebook/react/issues/11347#issuecomment-1899140345"
+      >full support for web components</a
+    >, making these wrappers unnecessary. Though no release date has been set
+    yet.
   </Note>
 
   <p>
@@ -411,13 +409,11 @@ declare global {
   />
 
   <Note>
-    <p>
-      This uses TypeScript's declaration merging feature. You can read more
-      about it in the <a
-        href="https://www.typescriptlang.org/docs/handbook/declaration-merging.html"
-        >TypeScript Handbook</a
-      >.
-    </p>
+    This uses TypeScript's declaration merging feature. You can read more about
+    it in the <a
+      href="https://www.typescriptlang.org/docs/handbook/declaration-merging.html"
+      >TypeScript Handbook</a
+    >.
   </Note>
 
   <p>
@@ -504,13 +500,11 @@ declare module "svelte/elements" {
   />
 
   <Note>
-    <p>
-      This uses TypeScript's declaration merging feature. You can read more
-      about it in the <a
-        href="https://www.typescriptlang.org/docs/handbook/declaration-merging.html"
-        >TypeScript Handbook</a
-      >.
-    </p>
+    This uses TypeScript's declaration merging feature. You can read more about
+    it in the <a
+      href="https://www.typescriptlang.org/docs/handbook/declaration-merging.html"
+      >TypeScript Handbook</a
+    >.
   </Note>
 
   <p>
