fix broken links

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -16,8 +16,9 @@ import Link from "../../components/Link.astro";
 >
   <p>
     This component, combined with
-    <Link href="/api/calendar-month/"><code>{`<calendar-month>`}</code></Link>,
-    is used to select a single date. It can display one or more months at a
+    <Link href="/components/calendar-month/"
+      ><code>{`<calendar-month>`}</code></Link
+    >, is used to select a single date. It can display one or more months at a
     time.
   </p>
 
