--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -16,8 +16,12 @@ import Link from "../../components/Link.astro";
   <p>
     This is the lowest level component that displays a grid of clickable days.
     It should not be used alone, but as a descendant of one of
-    <Link href="/api/calendar-date/"><code>{`<calendar-date>`}</code></Link> or
-    <Link href="/api/calendar-range/"><code>{`<calendar-range>`}</code></Link>.
+    <Link href="/components/calendar-date/"
+      ><code>{`<calendar-date>`}</code></Link
+    > or
+    <Link href="/components/calendar-range/"
+      ><code>{`<calendar-range>`}</code></Link
+    >.
   </p>
 
   <Heading level={2}>Properties and attributes</Heading>
