--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -16,8 +16,9 @@ import Link from "../../components/Link.astro";
 >
   <p>
     This component, combined with
-    <Link href="/api/calendar-month/"><code>{`<calendar-month>`}</code></Link>,
-    is used to select a date range. It shows one or more months at a time.
+    <Link href="/components/calendar-month/"
+      ><code>{`<calendar-month>`}</code></Link
+    >, is used to select a date range. It shows one or more months at a time.
   </p>
 
   <Example>
