fix: change forwardRef to ref

--- a/docs/src/pages/guides/frameworks.astro
+++ b/docs/src/pages/guides/frameworks.astro
@@ -110,7 +110,7 @@ export const CalendarDate = forwardRef(function CalendarDate(
 
   return (
     <calendar-date
-      ref={forwardRef}
+      ref={ref}
       show-outside-days={showOutsideDays || undefined}
       first-day-of-week={firstDayOfWeek}
       {...props}
